--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@testing-library/user-event": "^13.5.0",
     "@tinymce/tinymce-react": "^6.1.0",
     "axios": "^1.9.0",
+    "dayjs": "^1.11.13",
+    "js-cookie": "^3.0.5",
     "react": "^19.1.0",
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.1.0",
