--- a/package.json
+++ b/package.json
@@ -4,21 +4,26 @@
   "private": true,
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "@srexi/purecounterjs": "^1.5.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@tinymce/tinymce-react": "^6.1.0",
+    "aos": "^2.3.4",
     "axios": "^1.9.0",
-    "bootstrap": "^5.3.5",
+    "bootstrap": "^5.3.6",
+    "bootstrap-icons": "^1.13.1",
+    "boxicons": "^2.1.4",
     "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
     "react": "^19.1.0",
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.1",
-    "react-router-dom": "^7.5.2",
+    "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1",
+    "remixicon": "^4.6.0",
     "styled-components": "^6.1.17",
     "web-vitals": "^2.1.4",
     "yup": "^1.6.1"
